Adiciona cadastro, lista e pesquisa de Cliente

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,14 @@
 	<nav class="navbar navbar-light bg-light">
 		<a class="navbar-brand" href="/veiculo/pesquisa">Pesquisar veículos</a>
 	</nav>
+	<br>
+	<nav class="navbar navbar-light bg-light">
+		<a class="navbar-brand" href="/cliente/formulario-cliente">Cadastro Clientes</a>
+	</nav>
+	<br>
+	<nav class="navbar navbar-light bg-light">
+		<a class="navbar-brand" href="/cliente">Clientes Cadastrados</a>
+	</nav>
 
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
